# msd-repo-doc

./: .env  .env.example  .gitignore  .replit  .replit-deployignore  install.bat  package.json  pnpm-lock.yaml  pyproject.toml  replit.md  requirements.txt  start.bat  stop.bat  tunnel.bat
artifacts/api-server/src/: app.ts  index.ts
artifacts/doc-generator/: index.html  package.json  requirements.yaml  vite.config.ts
artifacts/doc-generator/.replit-artifact/: artifact.toml
attached_assets/: Pasted--AI-Documentation-Generator-Using-JSON-Knowledge-Graph-_1773466655836.txt  Pasted--RUNTIME-ERROR-type-runtime-error-timestamp-17738064698_1773809324838.txt
backend/: main.py
backend/models/: schemas.py
backend/services/: ai_reasoning.py  chunking_engine.py  claude_analyzer.py  doc_exporter.py  extractor.py  flow_generator.py  generic_project_parser.py  github_downloader.py  knowledge_graph.py  source_code_parser.py  xml_parser.py
extracted_zip/Functionality 1/: InventAgingReceiptView.Pwc.xml  InventAgingTmp.Pwc.xml  PwcInventAging.xml  PwcInventAgingCmdAggregateReceiptQty_Extension.xml  PwcInventAgingCmdAggregateSelected_Extension.xml  PwcInventAgingCmdMapQueryClass_Extension.xml  PwcInventAgingController.xml  PwcInventAgingQueryBuilderClass_Extension.xml
extracted_zip/Functionality 2/: PwcSLMInventTransSync.xml  PwcSLMInventTransSyncContract.xml  PwcSLMInventTransSyncController.xml  PwcSLMInventTransSyncDataContract.xml  PwcSLMInventTransSyncRequestContract.xml  PwcSLMInventTransSyncResponseContract.xml
lib/api-spec/: openapi.yaml  orval.config.ts
(+47 files in other folders)
