[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "python-dotenv>=1.1.0",
    "fpdf2>=2.8.7",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "markdown>=3.10.2",
    "motor>=3.7.1",
    "openai>=2.28.0",
    "pydantic>=2.12.5",
    "pymongo>=4.16.0",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.22",
    "requests>=2.32.0",
    "uvicorn>=0.41.0",
]
